# ext.duck

./: .gitmodules  README.md  pyproject.toml  setup.py
discord/ext/duck/errors/: manager.py
discord/ext/duck/webserver/: README.md  __init__.py  cog.py  proc_base.py
